# intervoo-agents

./: .gitignore  voice-agent-prompt-design.md
CS-diagnostic-agent/: .env.example  Dockerfile  PROMPT.md  PROMPT_DIAGNOSTIC.md  README.md  diagnostic-questions.json  pyproject.toml
CS-diagnostic-agent/prompts/: PROMPT_20250502_1735.md
CS-diagnostic-agent/src/: agent.py  assessment_data.py  assessment_models.py  assessment_service.py  constants.py  knowledge_base.py  language.py  prompt.py  recording.py  scoring.py
CS-diagnostic-agent/tests/: test_agent.py  test_assessment.py  test_knowledge_base.py  test_recording.py
agent/: .dockerignore  Dockerfile  docker-compose.yml  livekit.toml  pyproject.toml  taskfile.yaml
agent/config/: agents.json
agent/prompts/diagnostic/: v1.md  v2.md  v3.md  v4.md  v5.md  v6.md  v7.md
agent/prompts/interruption/: v1.md
agent/prompts/interview/: v1.md  v2.md  v3.md  vasanth.md
agent/prompts/job/: v1.md
agent/prompts/pre-screen/: v1.md
agent/scripts/: sync_eval_prompts_to_langfuse.py  sync_prompts_to_langfuse.py
agent/src/: editor_tools.py  identity.py  kb_tools.py  knowledge_base.py  language.py  memory.py  memory_tools.py  profile.py  prompt.py  question_tools.py  recording_config.py  recording_db.py  recording_runtime.py  recording_store.py  recording_transcript.py  runtime_resources.py  screen_feedback.py  server.py  session.py  tracing.py  unified_agent.py  watchdog.py
agent/tests/: test_kb_tools.py  test_profile.py  test_prompt.py  test_recording_artifacts.py  test_server.py  test_session.py  test_unified_agent.py
eval/: evaluate.py  report.py
interview-agent/: .env.example  PROMPT.md  README.md  livekit.toml  pyproject.toml  taskfile.yaml
interview-agent/prompts/: PROMPT_20250420_2220.md
interview-agent/src/: agent.py  constants.py  knowledge_base.py  language.py  prompt.py  recording_config.py  watchdog.py
interview-agent/src/interview_coaching_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
interview-agent/tests/: test_agent.py  test_recording.py
job-agent/: .env.example  .gitignore  README.md  livekit.toml  pyproject.toml
job-agent/prompts/: PROMPT_20250413_1541.md
job-agent/src/: __init__.py  agent.py  constants.py  identity.py  knowledge_base.py  memory.py  (+8 more)
pre-screen-agent/: .gitignore  PROMPT.md  README.md  livekit.toml  pyproject.toml
scripts/: sync_diagnostic_questions_to_chroma.py
self-hosted-livekit-workers/: .env.example  README.md  docker-compose.yml  manage.sh
vasanth-livekit-agent/: .env.example  pyproject.toml
vasanth-livekit-agent/config/: agents.json
vasanth-livekit-agent/prompts/interview/: vasanth.md  vasanth_evaluator.md
vasanth-livekit-agent/src/: avatar_provider.py  editor_tools.py  interview_evaluator.py  profile.py  prompt.py  qwen_tts.py  recording_config.py  recording_db.py  recording_runtime.py  recording_store.py  recording_transcript.py  runtime_resources.py  screen_feedback.py  server.py  session.py  unified_agent.py
vasanth-livekit-agent/tests/: test_avatar_provider.py  test_editor_tools.py  test_interview_evaluator.py  test_profile.py  test_prompt.py  test_recording_artifacts.py  test_server.py  test_unified_agent.py
(+14 files in other folders)
