[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasanth-livekit-agent"
version = "0.1.0"
description = "LiveKit voice agent for Vasanth mock interviews"
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.9",
    "livekit-agents==1.6.6",
    "livekit-plugins-openai==1.6.6",
    "livekit-plugins-assemblyai==1.6.6",
    "livekit-plugins-sarvam==1.6.4",
    "livekit-plugins-noise-cancellation~=0.2.6",
    "python-dotenv>=1.0",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "av>=17.1.0",
    "langfuse>=3.0",
    "livekit-plugins-liveavatar==1.6.4",
    "livekit-plugins-simli==1.6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
